--- a/arch/arm/configs/cyanogenmod_thunderg_defconfig
+++ b/arch/arm/configs/cyanogenmod_thunderg_defconfig
@@ -2156,6 +2156,9 @@ CONFIG_INOTIFY_USER=y
 CONFIG_QUOTA=y
 CONFIG_QUOTA_NETLINK_INTERFACE=y
 CONFIG_QUOTACTL=y
+CONFIG_QFMT_V2=y
+CONFIG_QUOTA_TREE=y
+
 
 
 # CONFIG_AUTOFS_FS is not set
