--- a/arch/arm/configs/cyanogenmod_thunderg_defconfig
+++ b/arch/arm/configs/cyanogenmod_thunderg_defconfig
@@ -1597,6 +1597,8 @@ CONFIG_FB_CFB_IMAGEBLIT=y
 CONFIG_FB_BACKLIGHT=y
 # CONFIG_FB_MODE_HELPERS is not set
 # CONFIG_FB_TILEBLITTING is not set
+CONFIG_GENLOCK=y
+
 
 #
 # Frame buffer hardware drivers
