--- a/arch/arm/configs/cyanogenmod_thunderg_defconfig
+++ b/arch/arm/configs/cyanogenmod_thunderg_defconfig
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Linux kernel version: 2.6.35.10
-# Sun Apr  8 07:45:41 2012
+# Mon Apr  9 15:51:19 2012
 #
 CONFIG_ARM=y
 CONFIG_SYS_SUPPORTS_APM_EMULATION=y
@@ -495,6 +495,7 @@ CONFIG_CMDLINE="init=/sbin/init root=/dev/ram rw initrd=0x11000000,16M console=t
 # CONFIG_CMDLINE_FORCE is not set
 # CONFIG_XIP_KERNEL is not set
 # CONFIG_KEXEC is not set
+# CONFIG_AUTO_ZRELADDR is not set
 
 #
 # CPU Power Management
