--- a/arch/arm/configs/cyanogenmod_thunderg_defconfig
+++ b/arch/arm/configs/cyanogenmod_thunderg_defconfig
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Linux kernel version: 2.6.35.10
-# Mon Apr  9 15:51:19 2012
+# Tue Apr 10 17:07:01 2012
 #
 CONFIG_ARM=y
 CONFIG_SYS_SUPPORTS_APM_EMULATION=y
@@ -35,7 +35,7 @@ CONFIG_BROKEN_ON_SMP=y
 CONFIG_LOCK_KERNEL=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
-CONFIG_LOCALVERSION="-cyanogenmod"
+CONFIG_LOCALVERSION="-perf+cm9"
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_LZMA=y
@@ -371,7 +371,7 @@ CONFIG_MSM_RMT_STORAGE_CLIENT=y
 # CONFIG_MSM_RMT_STORAGE_CLIENT_STATS is not set
 CONFIG_MSM_CPU_FREQ_SET_MIN_MAX=y
 CONFIG_MSM_CPU_FREQ_MAX=600000
-CONFIG_MSM_CPU_FREQ_MIN=122880
+CONFIG_MSM_CPU_FREQ_MIN=320000
 CONFIG_MSM7X27_OVERCLOCK=y
 # CONFIG_MSM7X27_BACONMAKER is not set
 # CONFIG_MSM_AVS_HW is not set
@@ -1598,7 +1598,7 @@ CONFIG_MSM_KGSL=y
 CONFIG_MSM_KGSL_GPUMMU=y
 CONFIG_MSM_KGSL_MMU=y
 # CONFIG_KGSL_PER_PROCESS_PAGE_TABLE is not set
-CONFIG_MSM_KGSL_PAGE_TABLE_SIZE=0xFFF0000
+CONFIG_MSM_KGSL_PAGE_TABLE_SIZE=0x8000000
 CONFIG_MSM_KGSL_MMU_PAGE_FAULT=y
 # CONFIG_MSM_KGSL_DISABLE_SHADOW_WRITES is not set
 # CONFIG_VGASTATE is not set
